--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@heroicons/react": "2.0.18",
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "3.3.1",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
@@ -32,7 +32,7 @@
     "html-react-parser": "4.2.2",
     "lodash": "4.17.21",
     "prettier-plugin-tailwindcss": "0.4.0",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "7.46.1",
     "react-toastify": "9.1.3",
     "remark": "14.0.3",
     "remark-html": "15.0.2",
