--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,14 +26,7 @@ jobs:
           node-version: 20.x
       - name: Install dependencies in production
         run: npm ci --ignore-scripts
-      - name: Cache next.js build
-        id: cache-npm
-        uses: actions/cache@v3
-        with:
-          path: .next/
-          key: ${{ runner.os }}-next-build-${{ hashFiles('src/','public/','next*','package*','jsconfig.json') }}
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: Build the app
+      - name: Build the app
         continue-on-error: true
         run: npm run build
       - name: Set up QEMU
