--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-  "name": "formenu-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prettier": "prettier --write .",
-    "precommit": "lint-staged",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "dependencies": {
-    "@headlessui/react": "1.7.17",
-    "@heroicons/react": "2.0.18",
-    "@hookform/resolvers": "3.3.1",
-    "next": "13.5.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "html-react-parser": "4.2.2",
-    "lodash": "4.17.21",
-    "react-hook-form": "7.46.2",
-    "react-toastify": "9.1.3",
-    "remark": "15.0.1",
-    "remark-html": "16.0.1",
-    "remark-parse": "11.0.0",
-    "sharp": "0.32.6"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "0.5.6",
-    "autoprefixer": "10.4.16",
-    "eslint-config-prettier": "8.10.0",
-    "husky": "8.0.3",
-    "lint-staged": "14.0.1",
-    "postcss": "8.4.30",
-    "prettier": "2.8.8",
-    "tailwindcss": "3.3.3",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
-    "prettier-plugin-tailwindcss": "0.4.1",
-    "typescript": "5.2.2",
-    "@tailwindcss/typography": "0.5.10"
-  }
+	"name": "formenu-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier --write .",
+		"precommit": "lint-staged",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.js": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"dependencies": {
+		"@headlessui/react": "1.7.17",
+		"@heroicons/react": "2.0.18",
+		"@hookform/resolvers": "3.3.1",
+		"@tailwindcss/typography": "0.5.10",
+		"autoprefixer": "10.4.15",
+		"eslint": "8.50.0",
+		"eslint-config-next": "13.5.3",
+		"next": "13.5.3",
+		"postcss": "8.4.30",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"html-react-parser": "4.2.2",
+		"lodash": "4.17.21",
+		"prettier-plugin-tailwindcss": "0.4.1",
+		"react-hook-form": "7.46.2",
+		"react-toastify": "9.1.3",
+		"remark": "15.0.1",
+		"remark-html": "16.0.1",
+		"remark-parse": "11.0.0",
+		"sharp": "0.32.6",
+		"typescript": "5.2.2"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "0.5.6",
+		"autoprefixer": "10.4.16",
+		"eslint-config-prettier": "8.10.0",
+		"husky": "8.0.3",
+		"lint-staged": "14.0.1",
+		"postcss": "8.4.30",
+		"prettier": "2.8.8",
+		"tailwindcss": "3.3.3"
+	}
 }
