--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
 		"@headlessui/react": "1.7.17",
 		"@heroicons/react": "2.0.18",
 		"@hookform/resolvers": "3.3.1",
+		"@nextui-org/react": "^2.1.13",
 		"@tailwindcss/typography": "0.5.10",
 		"autoprefixer": "10.4.15",
 		"eslint": "8.50.0",
 		"eslint-config-next": "13.5.3",
-		"next": "13.5.3",
-		"postcss": "8.4.30",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"framer-motion": "^10.16.4",
 		"html-react-parser": "4.2.2",
 		"lodash": "4.17.21",
+		"next": "13.5.3",
+		"postcss": "8.4.30",
 		"prettier-plugin-tailwindcss": "0.4.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-hook-form": "7.46.2",
 		"react-toastify": "9.1.3",
 		"remark": "15.0.1",
