--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
 		"remark": "15.0.1",
 		"remark-html": "16.0.1",
 		"remark-parse": "11.0.0",
-		"sharp": "0.32.6"
+		"sharp": "0.32.6",
+		"zustand": "4.4.3"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "0.5.6",
 		"@tailwindcss/typography": "0.5.10",
-		"tailwindcss": "3.3.3",
 		"autoprefixer": "10.4.16",
-		"eslint-config-prettier": "8.10.0",
 		"eslint": "8.52.0",
 		"eslint-config-next": "13.5.6",
+		"eslint-config-prettier": "8.10.0",
 		"husky": "8.0.3",
 		"lint-staged": "15.0.2",
 		"postcss": "8.4.31",
-		"prettier": "2.8.8"
+		"prettier": "2.8.8",
+		"tailwindcss": "3.3.3"
 	}
 }
