env exemple (possibly change a param to avoid certificate error)

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,3 +2,5 @@ NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_URL=
 NEXT_PUBLIC_URL_ALT=
 NEXT_PUBLIC_API_TOKEN=
+# to avoid https://stackoverflow.com/questions/12180552/openssl-error-self-signed-certificate-in-certificate-chain process.env.NODE_TLS_REJECT_UNAUTHORIZED = "0";
+NODE_TLS_REJECT_UNAUTHORIZED=
