--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nextui-org/react": "2.2.9",
     "framer-motion": "10.16.4",
     "fuse.js": "7.0.0",
-    "next": "14.0.2",
+    "next": "^14.0.3-canary.4",
     "postcss": "8.4.31",
     "prettier-plugin-tailwindcss": "0.5.7",
     "react": "18.2.0",
