--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "@heroicons/react": "2.1.1",
     "@hookform/resolvers": "3.3.4",
     "@nextui-org/react": "2.2.9",
-    "framer-motion": "10.18.0",
+    "framer-motion": "11.0.6",
     "fuse.js": "7.0.0",
-    "next": "^14.0.3-canary.4",
+    "next": "14.1.1-canary.71",
     "postcss": "8.4.35",
-    "prettier-plugin-tailwindcss": "0.5.7",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.50.1",
     "react-toastify": "9.1.3",
-    "sharp": "0.32.6",
+    "sharp": "0.33.2",
     "zustand": "4.5.1"
   },
   "devDependencies": {
@@ -41,10 +41,10 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
+    "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "postcss": "8.4.35",
-    "prettier": "3.0.3",
+    "prettier": "3.2.5",
     "tailwindcss": "3.4.1"
   }
 }
