--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "1.7.19",
+    "@headlessui/react": "2.1.3",
     "@heroicons/react": "2.1.5",
     "@hookform/resolvers": "3.9.0",
     "@nextui-org/react": "2.4.6",
     "framer-motion": "11.3.30",
     "fuse.js": "7.0.0",
-    "next": "14.2.6",
+    "next": "15.0.0-canary.130",
     "postcss": "8.4.41",
-    "prettier-plugin-tailwindcss": "0.5.13",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
     "react-toastify": "10.0.5",
-    "sharp": "0.33.3",
+    "sharp": "0.33.5",
     "zustand": "4.5.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/typography": "0.5.12",
+    "@tailwindcss/typography": "0.5.14",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.6",
