Update: Include "react" package in matchPackageNames - Added "react" to the list of matched package names - Ensures compatibility with React framework for automated updates

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
 			"automergeStrategy": "squash"
 		},
 		{
-			"matchPackageNames": ["next"],
+			"matchPackageNames": ["next", "react"],
 			"allowedVersions": "current"
 		}
 	]
