--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@nextui-org/react": "2.4.6",
     "framer-motion": "11.3.30",
     "fuse.js": "7.0.0",
-    "next": "canary",
+    "next": "14.2.1-canary.7",
     "postcss": "8.4.41",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "react": "canary",
-    "react-dom": "canary",
+    "react":     "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
     "react-toastify": "10.0.5",
     "sharp": "0.33.5",
@@ -39,7 +39,7 @@
     "@tailwindcss/typography": "0.5.14",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
-    "eslint-config-next": "canary",
+    "eslint-config-next": "14.2.6",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.1.5",
     "lint-staged": "15.2.9",
